log
Fri 21 Apr 2023 06:28:15 PM UTC: 
 treemap.c | 6 +++++-
 1 file changed, 5 insertions(+), 1 deletion(-)
In file included from test.c:4:
treemap.c: In function ‘createTreeMap’:
treemap.c:43:20: error: unused variable ‘root’ [-Werror=unused-variable]
   43 |         TreeNode * root = createTreeNode(key1, value);
      |                    ^~~~
treemap.c:43:27: error: ‘key1’ may be used uninitialized [-Werror=maybe-uninitialized]
   43 |         TreeNode * root = createTreeNode(key1, value);
      |                           ^~~~~~~~~~~~~~~~~~~~~~~~~~~
treemap.c:43:27: error: ‘value’ may be used uninitialized [-Werror=maybe-uninitialized]
cc1: all warnings being treated as errors
Compilation failed
450df47
Fri 21 Apr 2023 06:38:04 PM UTC: 
 treemap.c | 9 ++++-----
 1 file changed, 4 insertions(+), 5 deletions(-)
 tests:  1|8
total_score: 0/70
0e372bd
Fri 21 Apr 2023 06:38:26 PM UTC: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  4|7
total_score: 5/70
29d515d
Fri 21 Apr 2023 07:13:44 PM UTC: 
 treemap.c | 29 +++++++++++++++++++++++++++++
 1 file changed, 29 insertions(+)
 tests:  0|0
13b7300
Fri 21 Apr 2023 07:35:53 PM UTC: 
 treemap.c | 30 ++++++++++--------------------
 1 file changed, 10 insertions(+), 20 deletions(-)
In file included from test.c:4:
treemap.c: In function ‘insertTreeMap’:
treemap.c:59:9: error: too few arguments to function ‘tree->lower_than’
   59 |     if (tree->lower_than())
      |         ^~~~
treemap.c:62:1: error: expected expression before ‘}’ token
   62 | }
      | ^
Compilation failed
c28708f
Fri 21 Apr 2023 07:36:07 PM UTC: 
 treemap.c | 1 -
 1 file changed, 1 deletion(-)
 tests:  0|0
d46435e
